feat: adicionado user como dominio de aim
